--- a/gruvbox-dark-jb.yaml
+++ b/gruvbox-dark-jb.yaml
@@ -1,18 +1,85 @@
 scheme: "Gruvbox dark, jb fork"
 author: "荒野無燈(https://ttys3.net), Dawid Kurek (dawikur@gmail.com), Vincent Parizet (vincent.parizet@hotmail.fr), morhetz (https://github.com/Vincent-P/gruvbox-intellij-theme)"
-base00: "262626" # ----
-base01: "3a3a3a" # ---
-base02: "4e4e4e" # --
-base03: "8a8a8a" # -
-base04: "949494" # +
-base05: "b09d79" # ++
-base06: "b09d79" # +++
-base07: "ebdbb2" # ++++
-base08: "d75f5f" # var
-base09: "6fafbd" # const
-base0A: "afbf7e" # pkg class name
-base0B: "afaf00" # string
-base0C: "d3869b" # num, punc
-base0D: "83a598" # func
-base0E: "c7773e" # kwd
-base0F: "d79921" # brown
+base00: "32302f" # ----       #32302f
+base01: "4F4945" # ---        #4F4945
+base02: "504945" # --         #504945
+base03: "787878" # -          #787878
+base04: "bdae93" # +          #bdae93
+base05: "b09779" # ++         #b09779
+base06: "ebdbb2" # +++        #ebdbb2
+base07: "fbf1c7" # ++++       #fbf1c7
+base08: "fb4934" #            #fb4934
+base09: "d79921" #            #d79921
+base0A: "c7773e" #            #c7773e
+base0B: "b8bb26" #            #b8bb26
+base0C: "6fafbd" #            #6fafbd
+base0D: "83a598" #            #83a598
+base0E: "d3869b" #            #d3869b
+base0F: "d65d0e" #            #d65d0e
+
+# https://github.com/chriskempson/base16/blob/master/styling.md see also: http://chriskempson.com/projects/base16/
+# Colors base00 to base07 are typically variations of a shade and run from darkest to lightest.
+
+# base00 - Default Background
+# base01 - Lighter Background (Used for status bars, line number and folding marks)
+# base02 - Selection Background
+# base03 - Comments, Invisibles, Line Highlighting
+# base04 - Dark Foreground (Used for status bars)
+# base05 - Default Foreground, Caret, Delimiters, Operators
+# base06 - Light Foreground (Not often used)
+# base07 - Light Background (Not often used)
+# base08 - Variables, XML Tags, Markup Link Text, Markup Lists, Diff Deleted
+# base09 - Integers, Boolean, Constants, XML Attributes, Markup Link Url
+# base0A - Classes, Markup Bold, Search Text Background
+# base0B - Strings, Inherited Class, Markup Code, Diff Inserted
+# base0C - Support, Regular Expressions, Escape Characters, Markup Quotes
+# base0D - Functions, Methods, Attribute IDs, Headings
+# base0E - Keywords, Storage, Selector, Markup Italic, Diff Changed
+# base0F - Deprecated, Opening/Closing Embedded Language Tags, e.g. <?php ?>
+
+
+
+# https://github.com/Vincent-P/gruvbox-intellij-theme
+# {
+#   "name": "Gruvbox Dark Soft",
+#   "dark": true,
+#   "author": "Vincent Parizet",
+#   "editorScheme": "/gruvbox_dark_soft.xml",
+#   "colors": {
+#     "bg0": "#282828",
+#     "bg0_h": "#1d2021",
+#     "bg0_s": "#32302f",
+#     "bg0_ss": "#4F4945",
+#     "bg1": "#3c3836",
+#     "bg2": "#504945",
+#     "bg3": "#665c54",
+#     "bg4": "#7c6f64",
+#     "bg": "#32302f",
+
+#     "fg0": "#fbf1c7",
+#     "fg1": "#ebdbb2",
+#     "fg2": "#d5c4a1",
+#     "fg3": "#bdae93",
+#     "fg4": "#a89984",
+#     "fg": "#ebdbb2",
+
+#     "red0": "#cc241d",
+#     "red1": "#fb4934",
+#     "green0": "#98971a",
+#     "green1": "#b8bb26",
+#     "yellow0": "#d79921",
+#     "yellow1": "#fabd2f",
+#     "blue0": "#458588",
+#     "blue1": "#83a598",
+#     "purple0": "#b16286",
+#     "purple1": "#d3869b",
+#     "aqua0": "#689d6a",
+#     "aqua1": "#8ec07c",
+#     "gray0": "#a89984",
+#     "gray1": "#928374",
+#     "orange0": "#d65d0e",
+#     "orange1": "#fe8019"
+#   },
+# }
+
+
