--- a/gruvbox-dark-soft.yaml
+++ b/gruvbox-dark-soft.yaml
@@ -1,18 +1,18 @@
 scheme: "Gruvbox dark, soft"
 author: "Dawid Kurek (dawikur@gmail.com), morhetz (https://github.com/morhetz/gruvbox)"
-base00: "32302f" # ----
-base01: "3c3836" # ---
-base02: "504945" # --
-base03: "665c54" # -
-base04: "bdae93" # +
-base05: "d5c4a1" # ++
-base06: "ebdbb2" # +++
-base07: "fbf1c7" # ++++
-base08: "fb4934" # red
-base09: "fe8019" # orange
-base0A: "fabd2f" # yellow
-base0B: "b8bb26" # green
-base0C: "8ec07c" # aqua/cyan
-base0D: "83a598" # blue
-base0E: "d3869b" # purple
-base0F: "d65d0e" # brown
+base00: "32302f" # ----       #32302f
+base01: "3c3836" # ---        #3c3836
+base02: "504945" # --         #504945
+base03: "665c54" # -          #665c54
+base04: "bdae93" # +          #bdae93
+base05: "d5c4a1" # ++         #d5c4a1
+base06: "ebdbb2" # +++        #ebdbb2
+base07: "fbf1c7" # ++++       #fbf1c7
+base08: "fb4934" # red        #fb4934
+base09: "fe8019" # orange     #fe8019
+base0A: "fabd2f" # yellow     #fabd2f
+base0B: "b8bb26" # green      #b8bb26
+base0C: "8ec07c" # aqua/cyan  #8ec07c
+base0D: "83a598" # blue       #83a598
+base0E: "d3869b" # purple     #d3869b
+base0F: "d65d0e" # brown      #d65d0e
